fixed visible checkbox from showing

--- a/hushline/static/css/style.css
+++ b/hushline/static/css/style.css
@@ -1099,6 +1099,7 @@ p.helper {
 
 .toggle-ui {
     position: relative;
+    overflow: hidden;
 }
 
 .toggle-ui label {
